<resources>
    <string name="app_name">SRI Pharmacy</string>
    <string name="title_home">Home</string>
    <string name="title_products">Products</string>
    <string name="title_promotion">Promotion</string>
    <string name="title_user">User</string>
    <string name="title_cart">Cart</string>


    <string name="msg1">Email</string>
    <string name="msg2">Password</string>
    <string name="msg3">Number</string>
    <string name="msg4">Address</string>
    <string name="msg5">Cart</string>
    <string name="msg6">CREATE ACCOUNT</string>
    <string name="feedback">We want to know what you thought of your experience at SRI-PHARMACY.So we d love to hear your feedback . </string>
    <string name="login">login</string>
    <string name="signin">SIGNIN</string>
    <string name="signup">SIGNUP</string>
    <string name="welcome">WELCOME</string>


    <string name="card_number">Card Number</string>
    <string name="name">CardHolder Name</string>
    <string name="date">Expire Date</string>
    <string name="cvv">CVV</string>


    <string name="textView5">"Order Item List "</string>
    <string name="editTextTextPostalAddress">"Address "</string>
    <string name="button3">REMOVE</string>
    <string name="button5">UPDATE</string>
    <string name="textView">Delivery address</string>
    <string name="button2">PROCEED ORDER</string>
    <string name="button">ENTER ADDRESS</string>
    <string name="button4">BROWSE MORE PRODUCTS</string>
    <string name="textView2">CHECKOUT</string>
    <string name="editTextTextPostalAddress2">State/Province</string>
    <string name="editTextTextPostalAddress3">City</string>
    <string name="editTextTextPostalAddress4">Postal Code</string>
    <string name="editTextTextPostalAddress5">Expected delivery date</string>
    <string name="textView6">Panadol Card                            1x                 Rs.50</string>
    <string name="textView7">Gluco Syrup (500ml)               1x               Rs.250</string>
    <string name="textView9">Items : 2</string>
    <string name="textView10">Subtotal : Rs.300</string>
    <string name="radioButton">Pamankada</string>
<<<<<<< final
    <string name="Discount">Discount</string>
    <string name="Final_Payment">Final Payment</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="Address">Address</string>
    <string name="amt">amt</string>
    <string name="jj">Total : Rs.400</string>
    <string name="ff">Total : Rs.400</string>
    <string name="hintaddress">hintaddress</string>
    <string name="hintcity">hintcity</string>
    <string name="hintpostal">hintpostal</string>
    <string name="edate">hintdate</string>
    <string name="Fullname">Fullname</string>
    <string name="Purchase">Purchase</string>
    <string name="product">Total Product Price</string>

   <string name="hintaddress">Address</string>
    <string name="hintstate">"State/Province "</string>
    <string name="hintcity">City</string>
    <string name="hintpostal">Postal Code</string>
    <string name="hintdelivery">Expected Delivery Date</string>
    <string name="hintdate">Expected Delivery Date</string>
    <string name="ettdate">Expected Delivery Date</string>
    <string name="etdate">Expected Delivery Date</string>



</resources>
